styles.css
/*
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
*/

/* CORE STYLES */

html {
    scroll-behavior: smooth;
}

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #fff; /* Changed to white */
    color: #333;
    line-height: 1.6;
}

.container {
    max-width: 1100px;
    margin: auto;
    overflow: hidden;
    padding: 0 20px;
}

/* SHOWCASE STYLES */

.content-flex-container {
    /* background: rgba(244, 244, 244, 1); */
    display: flex;
    align-items: center;
    justify-content: center;
    /* padding: 10px; */
}

.image-container {
    flex: 1;
    text-align: center;
    margin: 20px;
}

.image-container .headshot {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
}

.text-container {
    flex: 2;
    margin: 20px;
}

@media screen and (max-width: 768px) and (orientation: portrait) {
    .content-flex-container {
        flex-direction: column-reverse;
        text-align: left;
    }

    .text-container {
        margin-top: 0;
        margin-bottom: 0;
    }
}

.grey-box {
    background: #f4f4f4;
    margin-bottom: 8px;
    padding: 6px; /* Further reduced padding */
    border-radius: 4px; /* Slightly reduced radius for a sharper look */
    font-size: 0.9em; /* Adjusted for overall font size */
}

.hero-image {
    width: 100vw; /* 70% of the viewport width */
    height: 100vh;
    display: block; /* Remove any default inline spacing */
    margin: auto; /* Center the image if smaller than the viewport */
    object-fit: cover;
}

.hero-image-container {
    position: relative;
    width: 60vw; /* Adjust as needed */
    height: 55vh;
    overflow: hidden;
    margin: auto;
}

.hero-image-container img {
    width: 100%; /* Ensure image covers the container */
    height: 100%; /* Maintain aspect ratio */
    display: block;
    margin: auto;
    object-fit: cover;
}

.hero-image-container::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 1%, rgba(255, 255, 255, 0) 99%, rgba(255, 255, 255, 1) 100%);
    z-index: 1;
}

/* HEADER STYLES */

header {
    background: #fff;
    color: #333;
    padding-top: 30px;
    min-height: 70px;
    border-bottom: 1px solid #000; /* Thin black line */
}

header a {
    color: #87CEEB; /* Light blue color */
    text-decoration: none;
    text-transform: uppercase;
    font-size: 16px;
}

header ul {
    padding: 0;
    list-style: none;
}

header li {
    display: inline;
    margin: 0 20px;
}

header #branding {
    float: left;
}

header #branding h1 {
    margin: 0;
}

header nav {
    float: right;
    margin-top: 10px;
}

header .current a,
header a:hover {
    color: #2a8bcd; /* Slightly darker blue for the current page and on hover */
    font-weight: bold;
}

/* FOOTER STYLES */

footer {
    background: #f4f4f4;
    color: #333;
    text-align: center;
    padding: 20px 0;
}

.footer-content p, .footer-content ul {
    margin: 0;
    padding: 0;
}

.footer-content p {
    margin-bottom: 15px; /* Added spacing above social media links */
}

.footer-content ul {
    list-style: none;
    padding-bottom: 15px; /* Added padding below social media links */
}

.footer-content li {
    display: inline;
    margin: 0 10px;
}

.footer-content a {
    color: #2a8bcd; /* Changed color to light blue */
    text-decoration: none;
    font-weight: bold; /* Made text bold */
}

.footer-content a:hover {
    text-decoration: underline;
    color: #1a5a7a; /* Darker blue on hover */
}

.footer-content i {
    font-size: 24px; /* Icon size */
    margin-right: 8px; /* Space between icon and text */
    vertical-align: middle; /* Align with the text */
}

.fine-print {
    font-size: 0.8em;
    color: #666; /* Lighter color for fine print */
    margin-top: 20px;
}

/* JOURNEY STYLES */

#showcase, #journey, #publications {
    margin: 40px 0; /* Consistent top margin for both sections */
}

.experience {
    background: #f4f4f4;
    margin-bottom: 8px;
    padding: 6px; /* Further reduced padding */
    border-radius: 4px; /* Slightly reduced radius for a sharper look */
    font-size: 0.9em; /* Adjusted for overall font size */
}

.experience .date,
.experience .company,
.experience .description {
    display: block;
    margin: 1px 0; /* Reduced margin */
}

.experience .date {
    color: #999;
    font-weight: bold;
}

.experience .company {
    color: #333;
    font-weight: bold;
}

.experience .description {
    color: #666;
}

/* PUBLICATIONS STYLES */

#publications .publication {
    background: #f4f4f4;
    margin-bottom: 10px;
    padding: 10px;
    border-radius: 5px;
}

#publications .publication .date {
    font-size: 0.8em;
    color: #999;
    font-weight: bold;
}

#publications .publication .title {
    font-size: 1em;
    color: #333;
    font-weight: bold;
    display: block; /* Title on its own line */
}

#publications .publication .venue {
    font-size: 0.9em;
    color: #000;
    display: block; /* Venue on its own line */
}

#publications .publication .abstract {
    font-size: 0.9em;
    color: #666;
    display: block; /* Abstract on its own line */
}

#publications .publication .link {
    font-size: 0.8em;
    color: #2a8bcd; /* Light blue color for link */
    text-decoration: none;
    display: block; /* Link on its own line */
}

#publications .publication .link:hover {
    text-decoration: underline;
}

